feat: reservation report pdf generation and statistics revamp
Replace the hand-drawn OpenPDF table in the reservations report with a
Thymeleaf HTML template rendered to PDF via openhtmltopdf, keeping the
service layer free of any rendering-library dependency (ReservationReportService
now delegates to a ReservationReportPdfGenerator port). Embeds DejaVu Sans so
diacritics render correctly regardless of the host's installed fonts.

Also renames the report/statistics enum constants from Spanish to English
(MES_ANTERIOR/MES_EN_CURSO -> PREVIOUS_MONTH/CURRENT_MONTH, MENSUAL/SEMESTRAL
-> MONTHLY/SEMESTER) across the period resolver, statistics service, DTOs and
projections, since these names double as the public query-parameter contract
consumed by the frontend.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>